Major revamp of the input dataset preprocessing.

--- a/old_notebooks/Preprocess.ipynb
+++ b/old_notebooks/Preprocess.ipynb
@@ -20,75 +20,49 @@
     "import pandas as pd\n",
     "\n",
     "\n",
-    "tces_file = '/mnt/tess/labels/tce_bls_to_y3.csv'\n",
-    "ext_data_file = '/mnt/tess/labels/ext_mast_data.csv'\n",
-    "labels_file = '/mnt/tess/labels/labels_v9.csv'\n",
-    "splits_file = '/mnt/tess/labels/splits_v4.csv'\n",
-    "filter_unreviewed = True\n",
-    "\n",
+    "tces_file = '/mnt/tess/labels/tces-triage-v12.csv'\n",
+    "labels_file = '/mnt/tess/labels/labels-triage-v12.csv'\n",
     "\n",
     "tce_table = pd.read_csv(tces_file, header=0, low_memory=False).set_index('tic_id')\n",
-    "tce_table = tce_table.drop(columns=['Unnamed: 0'])\n",
-    "tce_table['Duration'] /= 24.0\n",
-    "\n",
-    "# Drop some common invalid examples.\n",
-    "# Orbits falling inside the star\n",
-    "tce_table = tce_table[~tce_table.Ilabel]\n",
-    "# Excessively large durations\n",
-    "tce_table = tce_table[tce_table.Duration < 0.9 * tce_table.Period]\n",
+    "tce_table = tce_table[tce_table.Exclude != 'Y']\n",
     "\n",
     "joined_table = tce_table\n",
-    "\n",
-    "ext_table = pd.read_csv(ext_data_file, header=0, low_memory=False).set_index('tic_id')\n",
-    "joined_table = joined_table.join(ext_table, on='tic_id', how='left')\n",
-    "\n",
-    "joined_table = joined_table[\n",
-    "    joined_table['objType'].isnull()\n",
-    "    | (joined_table['objType'] == 'STAR')\n",
-    "]\n",
-    "\n",
     "joined_table = joined_table.reset_index()[[\n",
-    "    'tic_id', 'RA', 'Dec', 'Tmag', 'Epoc', 'Period', 'Duration',\n",
-    "    'Transit_Depth', 'Sectors', 'star_rad', 'star_mass', 'teff',\n",
-    "    'logg', 'SN', 'Qingress'\n",
+    "  'tic_id', 'Tmag', 'Epoc', 'Period', 'Duration',\n",
+    "  'Transit_Depth', 'star_rad', 'star_mass',\n",
+    "  'filename', 'Split'\n",
     "]]\n",
+    "joined_table = joined_table.set_index('tic_id')\n",
     "\n",
     "\n",
     "labels_table = pd.read_csv(labels_file, header=0, low_memory=False)\n",
+    "labels_table['tic_id'] = labels_table['TIC ID']\n",
+    "\n",
     "disps = ['E', 'J', 'N', 'S', 'B']\n",
     "users = ['av', 'md', 'ch', 'as', 'mk', 'et', 'dm', 'td']\n",
-    "\n",
     "for d in disps:\n",
-    "    labels_table[f'disp_{d}'] = 0\n",
+    "  labels_table[f'disp_{d}'] = 0\n",
     "\n",
     "def set_labels(row):\n",
-    "    a = ~row.isna()\n",
-    "    if a['Final']:\n",
-    "        row[f'disp_{row[\"Final\"]}'] = 1\n",
-    "    else:\n",
-    "        for user in users:\n",
-    "            if a[user] and row[user] and row[user] != 'U':\n",
-    "                row[f'disp_{row[user]}'] += 1\n",
-    "                        \n",
-    "    return row\n",
-    "\n",
-    "if filter_unreviewed:\n",
-    "    labels_table = labels_table[labels_table['Needs review'] != '!']\n",
-    "labels_table['tic_id'] = labels_table['TIC ID']\n",
+    "  a = ~row.isna()\n",
+    "  if a['Final'] and row[\"Final\"] != 'U':\n",
+    "    has_label = True\n",
+    "    row[f'disp_{row[\"Final\"]}'] = 1\n",
+    "  else:\n",
+    "    has_label = False\n",
+    "    for user in users:\n",
+    "      if a[user] and row[user] and row[user] != 'U':\n",
+    "        has_label = True\n",
+    "        row[f'disp_{row[user]}'] += 1\n",
+    "  if not has_label:\n",
+    "    row['Exclude'] = 'Y'\n",
+    "  return row\n",
     "labels_table = labels_table.apply(set_labels, axis=1)\n",
+    "\n",
+    "labels_table = labels_table[labels_table.Exclude != 'Y']\n",
     "labels_table = labels_table[['tic_id'] + [f'disp_{d}' for d in disps]]\n",
-    "\n",
-    "\n",
-    "splits_table = pd.read_csv(splits_file, header=0, low_memory=False)\n",
-    "labels_table = labels_table.join(splits_table, how='inner')\n",
-    "Y12_tics = set(labels_table[labels_table.Hemisphere != 'Y3']['TIC ID'].values)\n",
-    "Y3_tics = set(labels_table[labels_table.Hemisphere == 'Y3']['TIC ID'].values)\n",
-    "labels_table = labels_table[\n",
-    "    (labels_table['TIC ID'].isin(Y3_tics) & (labels_table.Hemisphere == 'Y3'))\n",
-    "    | (labels_table['TIC ID'].isin(Y12_tics - Y3_tics) & (labels_table.Hemisphere != 'Y3'))]\n",
-    "\n",
     "labels_table = labels_table.set_index('tic_id')\n",
-    "joined_table = joined_table.set_index('tic_id')\n",
+    "\n",
     "joined_table = joined_table.join(labels_table, on='tic_id', how='inner')\n",
     "print(f'Total entries: {len(joined_table)}')\n",
     "joined_table = joined_table[\n",
@@ -97,22 +71,19 @@
     "print(f'Total labeled entries: {len(joined_table)}')\n",
     "\n",
     "\n",
-    "all_table = joined_table\n",
+    "t_train = joined_table[joined_table['Split'] == 'train'].drop(columns=['Split'])\n",
+    "t_val = joined_table[joined_table['Split'] == 'val'].drop(columns=['Split'])\n",
+    "t_test = joined_table[joined_table['Split'] == 'test'].drop(columns=['Split'])\n",
+    "all_table = joined_table.drop(columns=['Split'])\n",
     "\n",
-    "t_train = joined_table[joined_table['Split'] == 'train']\n",
-    "t_val = joined_table[joined_table['Split'] == 'val']\n",
-    "t_test = joined_table[joined_table['Split'] == 'test']\n",
-    "t_train = t_train.drop(columns=['Hemisphere', 'Seed randbetween(1, 100)', 'Split', 'TIC ID'])\n",
-    "t_val = t_val.drop(columns=['Hemisphere', 'Seed randbetween(1, 100)', 'Split', 'TIC ID'])\n",
-    "t_test = t_test.drop(columns=['Hemisphere', 'Seed randbetween(1, 100)', 'Split', 'TIC ID'])\n",
-    "all_table = all_table.drop(columns=['Hemisphere', 'Seed randbetween(1, 100)', 'Split', 'TIC ID'])\n",
+    "\n",
     "print(f'Split sizes. Train: {len(t_train)}; Valid: {len(t_val)}; Test: {len(t_test)}')\n",
     "print(f'Duplicate TICs: {len(all_table.index.values) - len(set(all_table.index.values))}')\n",
     "\n",
-    "t_train.to_csv('/mnt/tess/astronet/tces-v10-train.csv')\n",
-    "t_val.to_csv('/mnt/tess/astronet/tces-v10-val.csv')\n",
-    "t_test.to_csv('/mnt/tess/astronet/tces-v10-test.csv')\n",
-    "all_table.to_csv('/mnt/tess/astronet/tces-tmp-all.csv')"
+    "# t_train.to_csv('/mnt/tess/astronet/tces-v12-train.csv')\n",
+    "# t_val.to_csv('/mnt/tess/astronet/tces-v12-val.csv')\n",
+    "# t_test.to_csv('/mnt/tess/astronet/tces-v12-test.csv')\n",
+    "# all_table.to_csv('/mnt/tess/astronet/tces-v12-all.csv')"
    ]
   },
   {
@@ -141,116 +112,6 @@
    "outputs": [],
    "source": [
     "t_test.sample(5)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Run once"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def load_tces_old():\n",
-    "    tceold = pd.read_csv('/mnt/tess/astronet/tces.csv', header=0).set_index('tic_id')\n",
-    "\n",
-    "    # Only keep the max sectors read.\n",
-    "    maxsect = tceold.groupby('tic_id')['Sectors'].max()\n",
-    "    tceold = tceold.join(maxsect, on='tic_id', how='right', rsuffix='_max')\n",
-    "    tceold = tceold[tceold.Sectors == tceold.Sectors_max]\n",
-    "\n",
-    "    # Then keep the max row ID.\n",
-    "    maxrowid = tceold.groupby('tic_id')['row_id'].max()\n",
-    "    tceold = tceold.join(maxrowid, on='tic_id', how='right', rsuffix='_max')\n",
-    "    tceold = tceold[tceold.row_id == tceold.row_id_max]\n",
-    "\n",
-    "    return tceold\n",
-    "\n",
-    "def generate_tce_bls_instar():\n",
-    "    tcenew = pd.read_csv('/mnt/tess/labels/tce_bls_instar.csv', header=0).set_index('tic_id')\n",
-    "    tceold = load_tces_old()\n",
-    "    tcenorth = pd.read_csv('/mnt/tess/labels/tce_north_instar.csv', header=0).set_index('tic_id')\n",
-    "\n",
-    "    # Copy from old data where it's missing from the new.\n",
-    "    alltce = tcenew.join(tceold, how='outer', on='tic_id', rsuffix='_old')\n",
-    "    alltce = alltce.set_index('tic_id')\n",
-    "\n",
-    "    alltce = alltce.drop(columns=['row_id'])\n",
-    "\n",
-    "    def fillna(df, col_name):\n",
-    "        df.loc[df[col_name].isna(), col_name] = df.loc[df[col_name].isna(), col_name + '_old']\n",
-    "\n",
-    "    fillna(alltce, 'toi_id')\n",
-    "    fillna(alltce, 'Disposition')\n",
-    "    fillna(alltce, 'RA')\n",
-    "    fillna(alltce, 'Dec')\n",
-    "    fillna(alltce, 'Tmag')\n",
-    "    fillna(alltce, 'Epoc')\n",
-    "    fillna(alltce, 'Period')\n",
-    "    fillna(alltce, 'Duration')\n",
-    "    fillna(alltce, 'Transit_Depth')\n",
-    "    fillna(alltce, 'Sectors')\n",
-    "    fillna(alltce, 'camera')\n",
-    "    fillna(alltce, 'ccd')\n",
-    "    fillna(alltce, 'star_rad')\n",
-    "    fillna(alltce, 'star_mass')\n",
-    "    fillna(alltce, 'teff')\n",
-    "    fillna(alltce, 'logg')\n",
-    "    fillna(alltce, 'SN')\n",
-    "    fillna(alltce, 'Qingress')\n",
-    "\n",
-    "    alltce = alltce.drop(columns=[c for c in alltce.columns if c.endswith('_old')])\n",
-    "    \n",
-    "    alltce = alltce.append(tcenorth)\n",
-    "    \n",
-    "    alltce['Ilabel'] = alltce['Ilabel'].fillna(False)\n",
-    "\n",
-    "    alltce.to_csv('/mnt/tess/labels/tce_bls_instar+old.csv')\n",
-    "    \n",
-    "\n",
-    "def add_y3_data():\n",
-    "    tcenew = pd.read_csv('/mnt/tess/labels/Y3_cand_instar.csv', header=0, low_memory=False)\n",
-    "    actual_eph = pd.read_csv('/mnt/tess/labels/updated_ephemerides_triage.csv', header=0, low_memory=False)\n",
-    "    tceold = pd.read_csv('/mnt/tess/labels/tce_bls_instar+old.csv', header=0, low_memory=False)\n",
-    "\n",
-    "    tceold = tceold.drop(columns=['Unnamed: 0', 'a', 'ccd', 'camera', 'row_id_max', 'Disposition', 'toi_id'])\n",
-    "\n",
-    "    actual_eph['tic_id'] = actual_eph['tic']\n",
-    "\n",
-    "    tcenew['tic_id'] = tcenew['star_tic']\n",
-    "    tcenew['tic_id'] = tcenew['star_tic']\n",
-    "    tcenew['RA'] = tcenew['star_ra']\n",
-    "    tcenew['Dec'] = tcenew['star_dec']\n",
-    "    tcenew['Tmag'] = tcenew['star_tmag']\n",
-    "    tcenew['Transit_Depth'] = tcenew['planet_depth']\n",
-    "    tcenew['Sectors'] = tcenew.apply(lambda row: len(row['sector_id'].split(' ')), axis=1)\n",
-    "    tcenew['Sectors_max'] = tcenew.apply(lambda row: max(row['sector_id'].split(' ')), axis=1)\n",
-    "    tcenew['teff'] = tcenew['star_teff']\n",
-    "    tcenew['logg'] = tcenew['star_logg']\n",
-    "    tcenew['SN'] = tcenew['star_rad']\n",
-    "    tcenew['Qingress'] = tcenew['star_rad']\n",
-    "    tcenew['Ilabel'] = tcenew['instar']\n",
-    "\n",
-    "    actual_eph = actual_eph.set_index('tic_id')\n",
-    "\n",
-    "    tcenew = tcenew.join(actual_eph, how='inner', on='tic_id', rsuffix='_eph')\n",
-    "    tcenew['Epoc'] = tcenew['epo']\n",
-    "    tcenew['Period'] = tcenew['per']\n",
-    "    tcenew['Duration'] = tcenew['dur']\n",
-    "\n",
-    "    tcenew = tcenew[tceold.columns]\n",
-    "    tcenew = tcenew.drop_duplicates(subset='tic_id')\n",
-    "    tceold = tceold[~tceold.tic_id.isin(tcenew.tic_id)]\n",
-    "\n",
-    "    alltce = tceold\n",
-    "    alltce = alltce.append(tcenew)\n",
-    "    \n",
-    "    alltce.to_csv('/mnt/tess/labels/tce_bls_to_y3.csv')"
    ]
   }
  ],
