--- a/Preprocess.ipynb
+++ b/Preprocess.ipynb
@@ -15,75 +15,47 @@
    "source": [
     "import os\n",
     "\n",
-    "from astroquery.mast import Catalogs\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
     "\n",
-    "tces_file = '/mnt/tess/labels/tces-triage-v12.csv'\n",
-    "labels_file = '/mnt/tess/labels/labels-triage-v12.csv'\n",
+    "f = '/mnt/tess/labels/triage-v13.csv'\n",
     "\n",
-    "tce_table = pd.read_csv(tces_file, header=0, low_memory=False).set_index('tic_id')\n",
-    "tce_table = tce_table[tce_table.Exclude != 'Y']\n",
-    "\n",
-    "joined_table = tce_table\n",
-    "joined_table = joined_table.reset_index()[[\n",
-    "  'tic_id', 'Tmag', 'Epoc', 'Period', 'Duration',\n",
-    "  'Transit_Depth', 'star_rad', 'star_mass',\n",
-    "  'filename', 'Split'\n",
-    "]]\n",
-    "joined_table = joined_table.set_index('tic_id')\n",
-    "\n",
-    "\n",
-    "labels_table = pd.read_csv(labels_file, header=0, low_memory=False)\n",
-    "labels_table['tic_id'] = labels_table['TIC ID']\n",
+    "t = pd.read_csv(f, header=0, low_memory=False).set_index('Astro ID')\n",
     "\n",
     "disps = ['E', 'J', 'N', 'S', 'B']\n",
     "users = ['av', 'md', 'ch', 'as', 'mk', 'et', 'dm', 'td']\n",
     "for d in disps:\n",
-    "  labels_table[f'disp_{d}'] = 0\n",
+    "  t[f'disp_{d}'] = 0\n",
     "\n",
     "def set_labels(row):\n",
     "  a = ~row.isna()\n",
-    "  if a['Final'] and row[\"Final\"] != 'U':\n",
-    "    has_label = True\n",
+    "  if a['Final'] and row['Final'] in disps:\n",
     "    row[f'disp_{row[\"Final\"]}'] = 1\n",
     "  else:\n",
-    "    has_label = False\n",
     "    for user in users:\n",
-    "      if a[user] and row[user] and row[user] != 'U':\n",
-    "        has_label = True\n",
+    "      if a[user] and row[user] in disps:\n",
     "        row[f'disp_{row[user]}'] += 1\n",
-    "  if not has_label:\n",
-    "    row['Exclude'] = 'Y'\n",
     "  return row\n",
-    "labels_table = labels_table.apply(set_labels, axis=1)\n",
+    "t = t.apply(set_labels, axis=1)\n",
     "\n",
-    "labels_table = labels_table[labels_table.Exclude != 'Y']\n",
-    "labels_table = labels_table[['tic_id'] + [f'disp_{d}' for d in disps]]\n",
-    "labels_table = labels_table.set_index('tic_id')\n",
+    "t_train = t[t['Split'] == 'train']\n",
+    "t_val = t[t['Split'] == 'val']\n",
+    "t_test = t[t['Split'] == 'test']\n",
     "\n",
-    "joined_table = joined_table.join(labels_table, on='tic_id', how='inner')\n",
-    "print(f'Total entries: {len(joined_table)}')\n",
-    "joined_table = joined_table[\n",
-    "    sum(joined_table[f'disp_{d}'] for d in disps) > 0\n",
-    "]\n",
-    "print(f'Total labeled entries: {len(joined_table)}')\n",
+    "assert not any((t_train['disp_E'] + t_train['disp_J']+ t_train['disp_N'] + t_train['disp_S'] + t_train['disp_B']) == 0)\n",
+    "assert not any((t_val['disp_E'] + t_val['disp_J']+ t_val['disp_N'] + t_val['disp_S'] + t_val['disp_B']) == 0)\n",
+    "assert not any((t_test['disp_E'] + t_test['disp_J']+ t_test['disp_N'] + t_test['disp_S'] + t_test['disp_B']) == 0)\n",
     "\n",
+    "print('Splits')\n",
+    "print('  train:', len(t_train))\n",
+    "print('  val:', len(t_val))\n",
+    "print('  test:', len(t_test))\n",
     "\n",
-    "t_train = joined_table[joined_table['Split'] == 'train'].drop(columns=['Split'])\n",
-    "t_val = joined_table[joined_table['Split'] == 'val'].drop(columns=['Split'])\n",
-    "t_test = joined_table[joined_table['Split'] == 'test'].drop(columns=['Split'])\n",
-    "all_table = joined_table.drop(columns=['Split'])\n",
-    "\n",
-    "\n",
-    "print(f'Split sizes. Train: {len(t_train)}; Valid: {len(t_val)}; Test: {len(t_test)}')\n",
-    "print(f'Duplicate TICs: {len(all_table.index.values) - len(set(all_table.index.values))}')\n",
-    "\n",
-    "# t_train.to_csv('/mnt/tess/astronet/tces-v12-train.csv')\n",
-    "# t_val.to_csv('/mnt/tess/astronet/tces-v12-val.csv')\n",
-    "# t_test.to_csv('/mnt/tess/astronet/tces-v12-test.csv')\n",
-    "# all_table.to_csv('/mnt/tess/astronet/tces-v12-all.csv')"
+    "t_train.to_csv('/mnt/tess/astronet/tces-v13-train.csv')\n",
+    "t_val.to_csv('/mnt/tess/astronet/tces-v13-val.csv')\n",
+    "t_test.to_csv('/mnt/tess/astronet/tces-v13-test.csv')\n",
+    "t.to_csv('/mnt/tess/astronet/tces-v13-all.csv')"
    ]
   },
   {
