Fix scaling error.

--- a/old_notebooks/Restore.ipynb
+++ b/old_notebooks/Restore.ipynb
@@ -52,14 +52,14 @@
     "origtce['disp_B'] = 0\n",
     "origtce['disp_J'] = 0\n",
     "origtce['disp_N'] = 0\n",
-    "origtce['Period'] /= 24.0\n",
+    "origtce['Duration'] /= 24.0\n",
     "origtce2 = pd.read_csv('/mnt/tess/labels/tce_bls_instar+old.csv', header=0, low_memory=False)\n",
     "origtce2['disp_E'] = 0\n",
     "origtce2['disp_S'] = 0\n",
     "origtce2['disp_B'] = 0\n",
     "origtce2['disp_J'] = 0\n",
     "origtce2['disp_N'] = 0\n",
-    "origtce2['Period'] /= 24.0\n",
+    "origtce2['Duration'] /= 24.0\n",
     "\n",
     "newtce = pd.read_csv('/mnt/tess/labels/tces-triage-v12.csv', header=0, low_memory=False)\n",
     "\n",
@@ -438,44 +438,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "final"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "pd.set_option('display.max_columns', None)\n",
-    "t_train.sample(5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "t_val.sample(5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "t_test.sample(5)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Issues:\n",
-    " * vlookup failed for duplicate tics, double check\n",
-    " * 30113151 maybe E?"
+    "final"
    ]
   }
  ],
