--- a/Data.ipynb
+++ b/Data.ipynb
@@ -14,10 +14,10 @@
     "# model_name = 'AstroCNNModelVetting'\n",
     "# config_name = 'vrevised'\n",
     "# labels = ['p', 'e', 'n']\n",
-    "tces_file = '/mnt/tess/astronet/tces-v12-y2-train.csv'\n",
-    "file_pattern = '/mnt/tess/astronet/tfrecords-35-y2-train/*'\n",
+    "tces_file = '/mnt/tess/astronet/tces-v13-train.csv'\n",
+    "file_pattern = '/mnt/tess/astronet/tfrecords-37-train/*'\n",
     "model_name = 'AstroCNNModel'\n",
-    "config_name = 'revised_tuned'\n",
+    "config_name = 'final_alpha'\n",
     "labels = ['E', 'N', 'J', 'S', 'B']\n",
     "\n",
     "filenames = tf.io.gfile.glob(file_pattern)\n",
@@ -33,7 +33,7 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "tce_table = pd.read_csv(tces_file, header=0)\n",
+    "tce_table = pd.read_csv(tces_file, header=0, low_memory=False)\n",
     "print(len(tce_table))\n",
     "tce_table.head(3)"
    ]
@@ -82,7 +82,7 @@
     "examples_table = pd.DataFrame.from_dict(series)\n",
     "\n",
     "pd.set_option('display.max_columns', None)\n",
-    "examples_table.describe()"
+    "examples_table[['secondary_scale']].describe()"
    ]
   },
   {
@@ -130,9 +130,9 @@
    "source": [
     "import numpy as np\n",
     "\n",
-    "print('TICs with labels mismatched between TCE and tfrecords:')\n",
-    "np.array(set(tce_table[tce_table[f'disp_{labels[0]}'] > 0]['tic_id'].values)\n",
-    "    - set(examples_table[examples_table[f'disp_{labels[0]}'] > 0]['tic_id'].values))"
+    "print('Label mismtaches between TCE and tfrecords:')\n",
+    "np.array(set(tce_table[tce_table[f'disp_{labels[0]}'] > 0]['Astro ID'].values)\n",
+    "    - set(examples_table[examples_table[f'disp_{labels[0]}'] > 0]['astro_id'].values))"
    ]
   },
   {
@@ -204,7 +204,7 @@
     "label_index = {k.lower(): i for i, k in enumerate(config.inputs.label_columns)}\n",
     "cols = [\"disp_E\", \"disp_N\", \"disp_J\", \"disp_S\", \"disp_B\"]\n",
     "\n",
-    "all_tics = []\n",
+    "all_ids = []\n",
     "bad_labels = []\n",
     "for d in ds:\n",
     "  lab = next(labels_iter)\n",
@@ -216,20 +216,24 @@
     "        tf.print(e, summarize=-1)\n",
     "        raise ValueError('data has NaNs.')\n",
     "    return e\n",
-    "  tic_id = d[1].numpy().item()\n",
-    "  all_tics.append(tic_id)\n",
+    "  ex_id = d[1].numpy().item()\n",
+    "  all_ids.append(ex_id)\n",
     "  \n",
     "  assert lab[0]['duration'] == d[0]['duration']\n",
-    "  rec = tce_table[tce_table.tic_id == tic_id]\n",
+    "  rec = tce_table[tce_table['Astro ID'] == ex_id]\n",
     "  for c in cols:\n",
     "    if (lab[1][0][label_index[c.lower()]].numpy() == 0) != (rec[c].values[0] == 0):\n",
-    "      bad_labels.append(tic_id)\n",
-    "      print('bad tic: ', tic_id)\n",
+    "      bad_labels.append(ex_id)\n",
+    "      print('bad example: ', ex_id)\n",
     "      print(rec)\n",
     "      print(cols)\n",
     "      print(lab[1][0])\n",
     "      break\n",
     "  if bad_labels:\n",
+    "    break\n",
+    "  \n",
+    "  if tic_id == 150104471:\n",
+    "    print(tic_id, lab[1:], rec)\n",
     "    break\n",
     "  \n",
     "  try:\n",
@@ -241,11 +245,11 @@
     "else:\n",
     "  print('No NaNs or mismtached labels found.')\n",
     "\n",
-    "if len(all_tics) == len(set(all_tics)):\n",
+    "if len(all_ids) == len(set(all_ids)):\n",
     "  print('No duplicates found.')\n",
     "else:\n",
-    "  print('Found duplicates!', len(all_tics) - len(set(all_tics)))\n",
-    "  print([t for t in set(all_tics) if all_tics.count(t) > 1])"
+    "  print('Found duplicates!', len(all_ids) - len(set(all_ids)))\n",
+    "  print([t for t in set(all_ids) if all_ids.count(t) > 1])"
    ]
   },
   {
@@ -290,9 +294,7 @@
    "outputs": [],
    "source": [
     "tic_id = 348962922\n",
-    "plot_ds_tce(ds, tic_id)\n",
-    "tce_table[tce_table['tic_id'] == tic_id]\n",
-    "examples_table[examples_table['tic_id'] == tic_id]"
+    "plot_ds_tce(ds, tic_id)"
    ]
   },
   {
@@ -301,7 +303,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tce_table[tce_table['tic_id'] == tic_id]"
+    "tce_table[tce_table['TIC ID'] == tic_id]"
    ]
   },
   {
@@ -310,7 +312,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "examples_table[examples_table['tic_id'] == tic_id]"
+    "examples_table[examples_table['astro_id'] == tce_table[tce_table['TIC ID'] == tic_id]['Astro ID'].values[0]]"
    ]
   },
   {
