--- a/Lightcurve.ipynb
+++ b/Lightcurve.ipynb
@@ -25,12 +25,40 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "origtce = pd.read_csv('/mnt/tess/labels/tce_bls_instar.csv', header=0, low_memory=False)\n",
+    "origtce2 = pd.read_csv('/mnt/tess/labels/tce_bls_instar+old.csv', header=0, low_memory=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "origtce2[origtce2['tic_id'] == 1969734426]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "origtce[origtce['tic_id'] == 1969734426]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
    "outputs": [],
    "source": [
-    "plot_all(229455001,\n",
+    "plot_all(213521411,\n",
     "         rpt_only=True,\n",
     "#          large=True,\n",
     "#          bkspace=5.0,\n",
@@ -66,7 +94,9 @@
     "tce_tables = {}\n",
     "\n",
     "tce_files = [\n",
-    "    '/mnt/tess/astronet/tces-v13-all.csv',\n",
+    "    '/mnt/tess/astronet/tces-v13-train.csv',\n",
+    "    '/mnt/tess/astronet/tces-v13-val.csv',\n",
+    "    '/mnt/tess/astronet/tces-v13-test.csv',\n",
     "    '/mnt/tess/astronet/tces-toi.csv',\n",
     "    '/mnt/tess/astronet/tces-s33_cam1_sample.csv',\n",
     "    '/mnt/tess/astronet/tces-s33_cam2ccd14_sample.csv',\n",
@@ -81,7 +111,7 @@
     "        if f not in tce_tables:\n",
     "            tce_tables[f] = pd.read_csv(f, header=0)\n",
     "        tce_table = tce_tables[f]\n",
-    "        tce = tce_table[tce_table.tic_id == tic]\n",
+    "        tce = tce_table[tce_table['TIC ID'] == tic]\n",
     "        if not len(tce):\n",
     "            continue\n",
     "        if len(tce) > 1:\n",
@@ -142,9 +172,9 @@
     "        plt.figure(figsize=fsize, dpi=dpi)\n",
     "    \n",
     "    tce, tces_file = get_tce(tic, item_no)\n",
-    "    period = tce.Period.values.item()\n",
+    "    period = tce.Per.values.item()\n",
     "    epoc = tce.Epoc.values.item()\n",
-    "    duration = tce.Duration.values.item()\n",
+    "    duration = tce.Dur.values.item()\n",
     "\n",
     "    print(tce)\n",
     "    \n",
@@ -196,7 +226,7 @@
     "    \n",
     "    \n",
     "    splt()\n",
-    "    ut, uf, _ = preprocess.read_and_process_light_curve(tic, tess_data_dir, 'SAP_FLUX')\n",
+    "    ut, uf, _ = preprocess.read_and_process_light_curve(tic, tess_data_dir, 'SAP_FLUX', tce.MinT, tce.MaxT)\n",
     "\n",
     "    input_mask = preprocess.get_spline_mask(ut, period, epoc, duration)\n",
     "    sf, mdata = keplersplinev2.choosekeplersplinev2(\n",
