Fix config bugs.

--- a/Tune.ipynb
+++ b/Tune.ipynb
@@ -37,7 +37,7 @@
     "from astronet import tune\n",
     "from astronet import train\n",
     "\n",
-    "config_name = 'revised'\n",
+    "config_name = 'final_alpha'\n",
     "\n",
     "tune.FLAGS = tune.parser.parse_args([\n",
     "  '--client_secrets', '../client_secrets.json',\n",
@@ -186,7 +186,7 @@
    "metadata": {},
    "source": [
     "```\n",
-    "python astronet/tune.py --model=AstroCNNModel --config_name=revised --train_files=/mnt/tess/astronet/tfrecords-35-train/* --eval_files=/mnt/tess/astronet/tfrecords-35-val/* --train_steps=0 --tune_trials=1000 --client_secrets=../client_secrets.json --study_id=35_revised_1\n",
+    "python astronet/tune.py --model=AstroCNNModel --config_name=final_alpha --train_files=/mnt/tess/astronet/tfrecords-37-train/* --eval_files=/mnt/tess/astronet/tfrecords-37-val/* --train_steps=0 --tune_trials=1000 --client_secrets=../client_secrets.json --study_id=test_fa_37_1\n",
     "```"
    ]
   }
