--- a/Train.ipynb
+++ b/Train.ipynb
@@ -12,14 +12,14 @@
     "from astronet import train\n",
     "\n",
     "model_name = 'AstroCNNModel'\n",
-    "config_name = 'revised_tuned'\n",
+    "config_name = 'final_alpha'\n",
     "\n",
     "def run_training(ensemble_no=1):\n",
     "    train.FLAGS = train.parser.parse_args([\n",
     "      '--model', model_name,\n",
     "      '--config_name', config_name,\n",
-    "      '--train_files', '/mnt/tess/astronet/tfrecords-36-train/*',\n",
-    "      '--eval_files', '/mnt/tess/astronet/tfrecords-36-train/*',\n",
+    "      '--train_files', '/mnt/tess/astronet/tfrecords-37-train/*',\n",
+    "      '--eval_files', '/mnt/tess/astronet/tfrecords-37-valid/*',\n",
     "      '--model_dir', '',\n",
     "      '--train_epochs', '2',\n",
     "      '--train_steps', '100'\n",
