Fix bug in missing value detection, simplify scaling, include star_rad_est.

--- a/Data.ipynb
+++ b/Data.ipynb
@@ -14,10 +14,10 @@
     "# model_name = 'AstroCNNModelVetting'\n",
     "# config_name = 'vrevised'\n",
     "# labels = ['p', 'e', 'n']\n",
-    "tces_file = '/mnt/tess/astronet/tces-v13-train.csv'\n",
-    "file_pattern = '/mnt/tess/astronet/tfrecords-37-train/*'\n",
+    "tces_file = '/mnt/tess/astronet/tces-v14-train.csv'\n",
+    "file_pattern = '/mnt/tess/astronet/tfrecords-38-train/*'\n",
     "model_name = 'AstroCNNModel'\n",
-    "config_name = 'final_alpha'\n",
+    "config_name = 'final_alpha_1'\n",
     "labels = ['E', 'N', 'J', 'S', 'B']\n",
     "\n",
     "filenames = tf.io.gfile.glob(file_pattern)\n",
