Fix more bugs in the input pipeline.

--- a/Data.ipynb
+++ b/Data.ipynb
@@ -21,6 +21,8 @@
     "labels = ['E', 'N', 'J', 'S', 'B']\n",
     "\n",
     "filenames = tf.io.gfile.glob(file_pattern)\n",
+    "\n",
+    "filenames = filenames[:1]\n",
     "    \n",
     "filenames"
    ]
@@ -82,7 +84,8 @@
     "examples_table = pd.DataFrame.from_dict(series)\n",
     "\n",
     "pd.set_option('display.max_columns', None)\n",
-    "examples_table[['secondary_scale']].describe()"
+    "# examples_table[['secondary_scale']].describe()\n",
+    "examples_table.describe()"
    ]
   },
   {
@@ -119,7 +122,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tce_table[tce_table.index == 91152385]"
+    "tce_table[tce_table.index == 8209]"
    ]
   },
   {
@@ -230,10 +233,6 @@
     "      print(lab[1][0])\n",
     "      break\n",
     "  if bad_labels:\n",
-    "    break\n",
-    "  \n",
-    "  if tic_id == 150104471:\n",
-    "    print(tic_id, lab[1:], rec)\n",
     "    break\n",
     "  \n",
     "  try:\n",
