--- a/Data.ipynb
+++ b/Data.ipynb
@@ -21,8 +21,6 @@
     "labels = ['E', 'N', 'J', 'S', 'B']\n",
     "\n",
     "filenames = tf.io.gfile.glob(file_pattern)\n",
-    "\n",
-    "filenames = filenames[:1]\n",
     "    \n",
     "filenames"
    ]
@@ -142,39 +140,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "from matplotlib import pyplot as plt\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "\n",
-    "from astronet.preprocess import preprocess\n",
-    "\n",
-    "\n",
-    "tess_data_dir = '/mnt/tess/lc'\n",
-    "\n",
-    "def find_tce(tic_id):\n",
-    "  with tf.device('cpu'):\n",
-    "    for filename in filenames:\n",
-    "      tfr = tf.data.TFRecordDataset(filename)\n",
-    "      for record in tfr:\n",
-    "        ex = tf.train.Example.FromString(record.numpy())\n",
-    "        if (ex.features.feature[\"tic_id\"].int64_list.value[0] == tic_id):\n",
-    "          print('TIC ID:', tic_id)\n",
-    "          for l in labels:\n",
-    "              print(f'{l}:', ex.features.feature[f\"disp_{l}\"].int64_list.value[0])\n",
-    "          print('Duration:', ex.features.feature[\"Duration\"].float_list.value[0])\n",
-    "          return ex\n",
-    "\n",
-    "    raise ValueError(\"{} not found in files: {}\".format(tic_id, filenames))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
     "scrolled": false
    },
    "outputs": [],
@@ -257,10 +222,53 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def astro_id(tic_id):\n",
+    "  return tce_table[tce_table['TIC ID'] == tic_id]['Astro ID'].values[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "from matplotlib import pyplot as plt\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "from astronet.preprocess import preprocess\n",
+    "\n",
+    "\n",
+    "tess_data_dir = '/mnt/tess/lc'\n",
+    "\n",
+    "def find_tce(astro_id):\n",
+    "  with tf.device('cpu'):\n",
+    "    for filename in filenames:\n",
+    "      tfr = tf.data.TFRecordDataset(filename)\n",
+    "      for record in tfr:\n",
+    "        ex = tf.train.Example.FromString(record.numpy())\n",
+    "        if (ex.features.feature[\"astro_id\"].int64_list.value[0] == astro_id):\n",
+    "          print('TIC ID:', tic_id)\n",
+    "          for l in labels:\n",
+    "              print(f'{l}:', ex.features.feature[f\"disp_{l}\"].int64_list.value[0])\n",
+    "          print('Duration:', ex.features.feature[\"Duration\"].float_list.value[0])\n",
+    "          return ex\n",
+    "\n",
+    "    raise ValueError(\"{} not found in files: {}\".format(astro_id, filenames))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "ds = ds.cache()\n",
-    "def plot_ds_tce(ds, tic_id):\n",
+    "def plot_ds_tce(ds, astro_id):\n",
     "    for d in ds:\n",
-    "        if d[1] == tic_id:\n",
+    "        if d[1] == astro_id:\n",
     "            for k, v in d[0].items():\n",
     "                if k.startswith('local_'):\n",
     "                    continue\n",
@@ -293,7 +301,7 @@
    "outputs": [],
    "source": [
     "tic_id = 348962922\n",
-    "plot_ds_tce(ds, tic_id)"
+    "plot_ds_tce(ds, astro_id(tic_id))"
    ]
   },
   {
@@ -311,7 +319,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "examples_table[examples_table['astro_id'] == tce_table[tce_table['TIC ID'] == tic_id]['Astro ID'].values[0]]"
+    "astro_id(tic_id)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "examples_table[examples_table['astro_id'] == astro_id(tic_id)]"
    ]
   },
   {
@@ -331,7 +348,8 @@
    },
    "outputs": [],
    "source": [
-    "tce = find_tce(368435330)\n",
+    "tic_id = 368435330\n",
+    "tce = find_tce(astro_id(tic_id))\n",
     "\n",
     "list(tce.features.feature.keys())"
    ]
