--- a/Lightcurve.ipynb
+++ b/Lightcurve.ipynb
@@ -25,41 +25,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "origtce = pd.read_csv('/mnt/tess/labels/tce_bls_instar.csv', header=0, low_memory=False)\n",
-    "origtce2 = pd.read_csv('/mnt/tess/labels/tce_bls_instar+old.csv', header=0, low_memory=False)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "origtce2[origtce2['tic_id'] == 1969734426]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "origtce[origtce['tic_id'] == 1969734426]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
    "outputs": [],
    "source": [
-    "plot_all(213521411,\n",
-    "         rpt_only=True,\n",
+    "plot_all(152539284,\n",
+    "#          rpt_only=True,\n",
     "#          large=True,\n",
     "#          bkspace=5.0,\n",
     "#          abs_xlim='3p',\n",
@@ -81,6 +53,7 @@
    },
    "outputs": [],
    "source": [
+    "import os\n",
     "from astropy.io import fits\n",
     "from astronet.preprocess import generate_input_records\n",
     "from astronet.preprocess import preprocess\n",
@@ -207,7 +180,7 @@
     "    \n",
     "    \n",
     "    if lc is None:\n",
-    "      file_names = tess_io.tess_filenames(tic, tess_data_dir)\n",
+    "      file_names = os.path.join(tess_data_dir, tce.File.values[0])\n",
     "    else:\n",
     "      file_names = lc\n",
     "    f = fits.open(file_names)\n",
@@ -226,7 +199,7 @@
     "    \n",
     "    \n",
     "    splt()\n",
-    "    ut, uf, _ = preprocess.read_and_process_light_curve(tic, tess_data_dir, 'SAP_FLUX', tce.MinT, tce.MaxT)\n",
+    "    ut, uf = preprocess.read_and_process_light_curve(tess_data_dir, 'SAP_FLUX', tce.File.values[0], tce.MinT.values[0], tce.MaxT.values[0])\n",
     "\n",
     "    input_mask = preprocess.get_spline_mask(ut, period, epoc, duration)\n",
     "    sf, mdata = keplersplinev2.choosekeplersplinev2(\n",
