--- a/Train-vetting.ipynb
+++ b/Train-vetting.ipynb
@@ -15,13 +15,13 @@
     "def run_training(ensemble_no=1):\n",
     "    train.FLAGS = train.parser.parse_args([\n",
     "      '--model', 'AstroCNNModelVetting',\n",
-    "      '--config_name', 'vrevised',\n",
-    "      '--train_files', '/mnt/tess/astronet/tfrecords-vetting-5-toi-train/*',\n",
-    "      '--eval_files', '/mnt/tess/astronet/tfrecords-vetting-5-toi-val/*',\n",
+    "      '--config_name', 'direct',\n",
+    "      '--train_files', '/mnt/tess/astronet/tfrecords-vetting-7-toi-train/*',\n",
+    "      '--eval_files', '/mnt/tess/astronet/tfrecords-vetting-7-toi-val/*',\n",
     "      '--pretrain_model_dir', '/mnt/tess/astronet/checkpoints/revised_tuned_30_run_1/1',\n",
-    "      '--model_dir', '',\n",
-    "      '--train_epochs', '5',\n",
-    "      '--train_steps', '100'\n",
+    "      '--model_dir', '/tmp/test',\n",
+    "      '--train_epochs', '1',\n",
+    "      '--train_steps', '10'\n",
     "    ])\n",
     "    \n",
     "    train.main(None)\n",
