--- a/Lightcurve.ipynb
+++ b/Lightcurve.ipynb
@@ -30,7 +30,7 @@
    },
    "outputs": [],
    "source": [
-    "plot_all(152539284,\n",
+    "plot_all(188768068,\n",
     "#          rpt_only=True,\n",
     "#          large=True,\n",
     "#          bkspace=5.0,\n",
@@ -63,13 +63,15 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
+    "pd.set_option('display.max_columns', None)\n",
+    "\n",
     "\n",
     "tce_tables = {}\n",
     "\n",
     "tce_files = [\n",
-    "    '/mnt/tess/astronet/tces-v13-train.csv',\n",
-    "    '/mnt/tess/astronet/tces-v13-val.csv',\n",
-    "    '/mnt/tess/astronet/tces-v13-test.csv',\n",
+    "    '/mnt/tess/astronet/tces-v14-train.csv',\n",
+    "    '/mnt/tess/astronet/tces-v14-val.csv',\n",
+    "    '/mnt/tess/astronet/tces-v14-test.csv',\n",
     "    '/mnt/tess/astronet/tces-toi.csv',\n",
     "    '/mnt/tess/astronet/tces-s33_cam1_sample.csv',\n",
     "    '/mnt/tess/astronet/tces-s33_cam2ccd14_sample.csv',\n",
@@ -82,7 +84,7 @@
     "def get_tce(tic, item_no):\n",
     "    for f in tce_files:\n",
     "        if f not in tce_tables:\n",
-    "            tce_tables[f] = pd.read_csv(f, header=0)\n",
+    "            tce_tables[f] = pd.read_csv(f, header=0, low_memory=False)\n",
     "        tce_table = tce_tables[f]\n",
     "        tce = tce_table[tce_table['TIC ID'] == tic]\n",
     "        if not len(tce):\n",
