--- a/Tune.ipynb
+++ b/Tune.ipynb
@@ -37,7 +37,7 @@
     "from astronet import tune\n",
     "from astronet import train\n",
     "\n",
-    "config_name = 'final_alpha'\n",
+    "config_name = 'final_alpha_1'\n",
     "\n",
     "tune.FLAGS = tune.parser.parse_args([\n",
     "  '--client_secrets', '../client_secrets.json',\n",
@@ -52,7 +52,7 @@
     "])\n",
     "\n",
     "\n",
-    "client = tune.initialize_client()"
+    "# client = tune.initialize_client()"
    ]
   },
   {
@@ -115,7 +115,8 @@
     "matplotlib.rcParams.update({'font.size': 16})\n",
     "\n",
     "fig, ax = plt.subplots()\n",
-    "ax.plot(trial_ids, np.minimum(metrics_loss, 0.5))\n",
+    "plt.ylim(min(metrics_loss), 0.07)\n",
+    "ax.plot(trial_ids, metrics_loss)\n",
     "plt.xlabel(\"validation loss\")\n",
     "sorted_metrics = sorted(metrics_loss, reverse=True)\n",
     "\n",
@@ -127,15 +128,6 @@
     "    best = i\n",
     "\n",
     "print('Best trial:', trial_ids[best])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Best so far: `projects/mdan-playground/locations/us-central1/studies/30_revised_1c_revised` (33 - 0.046386852860450745)\n",
-    "\n",
-    "New best: `projects/mdan-playground/locations/us-central1/studies/33_revised_1b_revised` (546 0.046330880373716354)"
    ]
   },
   {
@@ -154,14 +146,16 @@
     "for param in params[best]:\n",
     "  tune.map_param(config['hparams'], param, config['inputs'])\n",
     "\n",
-    "print(train.FLAGS.train_steps)\n",
+    "print(tune.FLAGS.train_steps)\n",
     "pprint.pprint(config['hparams'])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "import difflib\n",
@@ -186,7 +180,7 @@
    "metadata": {},
    "source": [
     "```\n",
-    "python astronet/tune.py --model=AstroCNNModel --config_name=final_alpha --train_files=/mnt/tess/astronet/tfrecords-37-train/* --eval_files=/mnt/tess/astronet/tfrecords-37-val/* --train_steps=0 --tune_trials=1000 --client_secrets=../client_secrets.json --study_id=test_fa_37_1\n",
+    "python astronet/tune.py --model=AstroCNNModel --config_name=final_alpha_1 --train_files=/mnt/tess/astronet/tfrecords-38-train/* --eval_files=/mnt/tess/astronet/tfrecords-38-val/* --train_steps=0 --tune_trials=1000 --client_secrets=../client_secrets.json --study_id=38_final_alpha_1_1\n",
     "```"
    ]
   }
