--- a/Lightcurve-vetting.ipynb
+++ b/Lightcurve-vetting.ipynb
@@ -8,7 +8,7 @@
    },
    "outputs": [],
    "source": [
-    "plot_all(113428669,\n",
+    "plot_all(121150643,\n",
     "#          rpt_only=True,\n",
     "#          large=True,\n",
     "#          bkspace=5.0,\n",
@@ -163,7 +163,10 @@
     "    f = fits.open(file_names)\n",
     "    \n",
     "    td = f[1].data[\"TIME\"]\n",
-    "    fd = f[1].data[\"KSPSAP_FLUX\"]\n",
+    "    if \"KSPSAP_FLUX\" in f[1].data:\n",
+    "      fd = f[1].data[\"KSPSAP_FLUX\"]\n",
+    "    else:\n",
+    "      fd = []\n",
     "    fs = f[1].data[\"SAP_FLUX\"]\n",
     "    \n",
     "    splt()\n",
