--- a/Tune.ipynb
+++ b/Tune.ipynb
@@ -52,7 +52,7 @@
     "])\n",
     "\n",
     "\n",
-    "# client = tune.initialize_client()"
+    "client = tune.initialize_client()"
    ]
   },
   {
